# Biblioteca_PI

Biblioteca_Backend22-main/: .pdm-python  db.sqlite3  pyproject.toml
Biblioteca_Backend22-main/config/: settings.py  urls.py
Biblioteca_Backend22-main/core/: admin.py
Biblioteca_Backend22-main/core/migrations/: 0001_initial.py  0002_emprestimos.py  0003_alter_alunos_matricula.py  0004_alter_emprestimos_aluno_alter_emprestimos_livro.py
Biblioteca_Backend22-main/core/models/: __init__.py  alunos.py  emprestimo.py  livros.py
Biblioteca_Backend22-main/core/serializers/: __init__.py  alunos.py  emprestimos.py  livros.py
Biblioteca_Backend22-main/core/views/: __init__.py  alunos.py  emprestimos.py  livros.py
